--- a/packages/calypso-build/package.json
+++ b/packages/calypso-build/package.json
@@ -73,12 +73,13 @@
 		"thread-loader": "^2.1.3",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
-		"webpack-cli": "^3.3.12"
+		"webpack-cli": "^4.2.0"
 	},
 	"peerDependencies": {
 		"enzyme": "^3.11.0",
 		"jest": ">=26.4.0",
 		"react": "^16.0.0",
-		"react-dom": "^16.0.0"
+		"react-dom": "^16.0.0",
+		"webpack": "^5.5.0"
 	}
 }
