--- a/packages/calypso-build/package.json
+++ b/packages/calypso-build/package.json
@@ -34,7 +34,6 @@
 		"extends @wordpress/browserslist-config"
 	],
 	"dependencies": {
-		"@automattic/mini-css-extract-plugin-with-rtl": "^0.8.0",
 		"@automattic/webpack-rtl-plugin": "^2.0.0",
 		"@babel/cli": "^7.12.1",
 		"@babel/compat-data": "^7.12.5",
@@ -63,6 +62,7 @@
 		"jest-config": "^26.4.0",
 		"jest-emotion": "^10.0.27",
 		"jest-enzyme": "^7.1.2",
+		"mini-css-extract-plugin": "^1.3.1",
 		"node-sass": "^4.13.0",
 		"postcss-custom-properties": "^9.1.1",
 		"postcss-loader": "^3.0.0",
