--- a/package.json
+++ b/package.json
@@ -300,7 +300,7 @@
 		"webpack-bundle-analyzer": "^4.1.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-middleware": "^4.0.2",
-		"webpack-dev-server": "^3.11.0",
+		"webpack-dev-server": "^4.0.0-beta.0",
 		"whybundled": "^1.4.2",
 		"wpcom": "^6.0.0",
 		"yargs": "^15.3.1"
